--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ ThobbyAk/super-rare-bazaar",
-    "create-local": "graph create --node http://localhost:8020/ ThobbyAk/super-rare-bazaar",
-    "remove-local": "graph remove --node http://localhost:8020/ ThobbyAk/super-rare-bazaar",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 ThobbyAk/super-rare-bazaar",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ thobbyak/super-rare-bazaar",
+    "create-local": "graph create --node http://localhost:8020/ thobbyak/super-rare-bazaar",
+    "remove-local": "graph remove --node http://localhost:8020/ thobbyak/super-rare-bazaar",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 thobbyak/super-rare-bazaar",
     "test": "graph test"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.34.0",
     "@graphprotocol/graph-ts": "0.28.0"
   },
-  "devDependencies": { "matchstick-as": "0.5.0" }
+  "devDependencies": {
+    "matchstick-as": "^0.5.0"
+  }
 }
